--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-					<li><a href="buy.html">Buy</a></li>
+					<li><a href="buy.html">Search</a></li>
 					<li><a href="sell.html" data-ng-show="user.authenticated === true">Sell</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
